[package]
name = "minecrust"
version = "0.1.0"
authors = ["Max Glass <glassmax13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfb8 = "0.7.1"
aes = "0.7.4"
rand = "0.8.4"
sha1 = "0.6.0"
ureq = { version = "2.1.1", features = ["json"] }
