[package]
name = "minecrust"
version = "0.1.0"
authors = ["Max Glass <glassmax13@gmail.com>"]
edition = "2018"

[dependencies]
aes = "0.7.4"
cfb8 = "0.7.1"
hyper = { version = "0.14.9", features = ["http1"] }
hyper-tls = "0.5.0"
rand = "0.8.4"
serde_json = "1.0.59"
sha1 = "0.6.0"
tokio = { version = "1.7.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
openssl = { version = "0.10.35", features = ["vendored"] }
pin-project-lite = "0.2.7"
